--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   font-size: 10px;
   box-sizing: border-box;
 }
@@ -92,3 +92,4 @@ input[type="select"] {
 .voiceinator button:nth-of-type(1) {
   margin-right: 2%;
 }
+ */
